--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,9 +46,13 @@ footer {
     height: 400px;
     cursor: pointer;
     margin-top: 5px;
-    
-    
+    box-shadow: 3px 3px 5px black;
+    transition: transform 300ms ease-in-out;
 }
+.animal-image:hover {
+    transform: scale(1.1);
+}
+
 
 figcaption {
     background: rgba(255, 255, 255, 0.7);
